# run_checks

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  run_checks  run_checks.sh  run_checks_only.sh  rustfmt.toml  tree.sh
src/: defaults.rs  display_all.rs  main.rs  run_checks.rs  tree.rs  util.rs
src/defaults/: mod.rs  templates.rs
src/defaults/templates/: .gitignore.template  CONTRIBUTING.md.template  config.toml.template
src/run_checks/: mod.rs  privacy.rs  run_tools.rs
