[package]
name = "run_checks"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/John-Beeping-Doe/run_checks"

[dependencies]
aho-corasick = "1.1.3"
clap = { version = "4.5.9", features = ["derive"] }
comfy-table = "7.1.1"
futures = "0.3.31"
owo-colors = "4.1.0"
tokio = { version = "1.41.1", features = ["full", "process"] }
walkdir = "2.5.0"
get_if_addrs = "0.5.3"
regex = "1.10"


